--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "axois": "^0.0.1-security",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "cropperjs": "^1.6.2",
     "vue": "^3.5.12",
+    "vue-google-charts": "^1.1.0",
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
