--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.8",
+    "@ffmpeg/ffmpeg": "^0.12.13",
     "axios": "^1.7.7",
     "axois": "^0.0.1-security",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "cropperjs": "^1.6.2",
+    "nouislider": "^15.8.1",
     "vue": "^3.5.12",
     "vue-google-charts": "^1.1.0",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.2",
+    "wavefile": "^11.0.0",
+    "wavesurfer.js": "^7.8.14",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
